[package]
name = "cassandra-proto"
version = "0.1.2"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
description = "Cassandra binary protocol primitives"
license = "MIT"
edition = "2018"

[features]
default = ["v4"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
appveyor = []

[dependencies]
bytes = "0.5.*"
byteorder = "1"
log = "0.4.1"
rand = "0.4.1"
snap = "0.2.3"
time = "0.1.38"
uuid = { version = "0.8", features = ["serde", "v4"] }
num_enum = "0.4.2"
syn = "1.0"
quote = "1.0"
serde = { version = "1.0.106", features = ["derive"] }

cbytes_macro_derive = { path = "./cbytes_macro_derive" }
